--- a/sass/_offer-section.scss
+++ b/sass/_offer-section.scss
@@ -20,19 +20,20 @@
         }
     }
 
-    &__image {
+    &__image-wrapper {
         width: 25%;
-        margin-top: 10px;
         float: left;
-
-        @media only screen and (min-width: 751px) and (max-width: 900px) {
-            width: 30%;
+        
+        @media only screen and (max-width: 750px) {
+            width: 100%;
         }
+    }
 
-        @media only screen and (min-width: 601px) and (max-width: 750px) {
-            width: 40%;
-            float: none;
-            display: block;
+    &__image {
+        max-width: 100%;
+        margin-top: 10px;
+
+        @media only screen and (max-width: 750px) {
             margin-left: auto;
             margin-right: auto;
             margin-top: 0;
@@ -44,7 +45,7 @@
         width: 100%;
         text-align: left;
 
-        @media only screen and (min-width: 601px) and (max-width: 750px) {
+        @media only screen and (max-width: 750px) {
             text-align: center;
         }
     }
@@ -59,11 +60,7 @@
         margin-left: 10%;
         float: right;
 
-        @media only screen and (min-width: 751px) and (max-width: 900px) {
-            width: 60%;
-        }
-
-        @media only screen and (min-width: 601px) and (max-width: 750px) {
+        @media only screen and (max-width: 750px) {
             clear: both;
             margin-left: 0;
             width: 100%;
